@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007-2008 - TortoiseSVN
+// Copyright (C) 2007-2010 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -29,34 +29,34 @@ bool MergeCommand::Execute()
 	DWORD nMergeWizardMode =
 		(DWORD)CRegDWORD(_T("Software\\TortoiseSVN\\MergeWizardMode"), 0);
 
-	if (parser.HasVal(_T("fromurl")))
-	{
-		// fromurl means merging a revision range
-		nMergeWizardMode = 2;
-	}
-	if (parser.HasVal(_T("fromurl2")))
-	{
-		// fromurl2 means merging a tree
-		nMergeWizardMode = 1;
-	}
+    if (parser.HasVal(_T("fromurl")))
+    {
+        // fromurl means merging a revision range
+        nMergeWizardMode = 2;
+    }
+    if (parser.HasVal(_T("tourl")))
+    {
+        // tourl means merging a tree
+        nMergeWizardMode = 1;
+    }
 
 	CMergeWizard wizard(IDS_PROGRS_CMDINFO, NULL, nMergeWizardMode);
 	wizard.wcPath = cmdLinePath;
 
-	if (parser.HasVal(_T("fromurl")))
-	{
-		wizard.URL1 = parser.GetVal(_T("fromurl"));
-		wizard.url = parser.GetVal(_T("fromurl"));
-		wizard.revRangeArray.FromListString(parser.GetVal(_T("revrange")));
-	}
-	if (parser.HasVal(_T("fromurl2")))
-	{
-		wizard.URL2 = parser.GetVal(_T("tourl"));
-		wizard.startRev = SVNRev(parser.GetVal(_T("fromrev")));
-		wizard.endRev = SVNRev(parser.GetVal(_T("torev")));
-	}
-	if (wizard.DoModal() == ID_WIZFINISH)
-	{
+    if (parser.HasVal(_T("fromurl")))
+    {
+        wizard.URL1 = parser.GetVal(_T("fromurl"));
+        wizard.url = parser.GetVal(_T("fromurl"));
+        wizard.revRangeArray.FromListString(parser.GetVal(_T("revrange")));
+    }
+    if (parser.HasVal(_T("tourl")))
+    {
+        wizard.URL2 = parser.GetVal(_T("tourl"));
+        wizard.startRev = SVNRev(parser.GetVal(_T("fromrev")));
+        wizard.endRev = SVNRev(parser.GetVal(_T("torev")));
+    }
+    if (wizard.DoModal() == ID_WIZFINISH)
+    {
 		CSVNProgressDlg progDlg;
 		progDlg.SetCommand(CSVNProgressDlg::SVNProgress_Merge);
 		int options = wizard.m_bIgnoreAncestry ? ProgOptIgnoreAncestry : 0;
